--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Просмотр трека на Yandex Maps</title>
+    <title>Просмотр маршрута на Yandex Maps</title>
     <meta charset="UTF-8" />
     <style>
       body {
